fix (header.css): adjust dropdown menu position for improved alignment

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -97,7 +97,7 @@ header {
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: 91px;
+    top: 89px;
     right: 0px;
     width: 250px;
     background-color: #1C1C1C;
